# rota-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs  routes.rs  server.rs
src/api/handlers/: auth.rs  dashboard.rs  deleted_proxy.rs  health.rs  logs.rs  mod.rs  proxy.rs  settings.rs
src/api/middleware/: cors.rs  jwt.rs  logging.rs  mod.rs
src/api/websocket/: dashboard.rs  logs.rs  mod.rs
src/database/: migrations.rs  mod.rs  pool.rs  timescale.rs
src/models/: dashboard.rs  log.rs  mod.rs  proxy.rs  settings.rs
src/proxy/: egress.rs  handler.rs  health.rs  mod.rs  server.rs  transport.rs  tunnel.rs
src/proxy/middleware/: auth.rs  mod.rs  rate_limit.rs
src/proxy/rotation/: dynamic.rs  least_conn.rs  mod.rs  random.rs  round_robin.rs  time_based.rs
src/repository/: dashboard.rs  deleted_proxy.rs  log.rs  mod.rs  proxy.rs  settings.rs
src/services/: log_cleanup.rs  mod.rs  proxy_auto_delete.rs
