[package]
name = "rota"
version = "0.1.0"
edition = "2021"
authors = ["Rota Contributors"]
description = "High-performance proxy rotation system"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "signal"] }

# Web frameworks
axum = { version = "0.7", features = ["ws", "macros"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
http-body-util = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.21"

# Proxy protocols
tokio-socks = "0.5"
tokio-stream = "0.1"
http = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
dashmap = "5"
governor = "0.6"
parking_lot = "0.12"
arc-swap = "1"
async-trait = "0.1"
futures = "0.3"
pin-project-lite = "0.2"

# System info
sysinfo = "0.30"

# URL parsing
url = "2"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "rota"
path = "src/main.rs"
